--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MYSQLHOST=mysql.railway.internal
 MYSQLUSER=root
 MYSQLPASSWORD=xxIArpODrKTQEkhEvVKFMlsmcTxJerzD
-MYSQLDATABASE=railway
+MYSQLDATABASE=malldb
 MYSQLPORT=3306
