--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MYSQLHOST=mysql.railway.internal
 MYSQLUSER=root
 MYSQLPASSWORD=xxIArpODrKTQEkhEvVKFMlsmcTxJerzD
-MYSQLDATABASE=malldb
+MYSQLDATABASE=railway
 MYSQLPORT=3306
